# emu68-genet-driver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  device.c  devtree.c  package-lock.cmake  unit.c  unit_task.c
cmake/: verstring.cmake
genet/: bcmgenet-tx.c  bcmgenet.c  phy.c
genet.device/: CMakeLists.txt
genet.device/include/: device.h
genet.device/include/genet/: bcmgenet-irq.h  bcmgenet-regs.h  bcmgenet.h  phy.h
genet.device/src/: bcmgenet-irq.c  bcmgenet-tx.c  bcmgenet.c  device.c  device_abortio.c  device_beginio.c  devtree_parse.c  phy.c  phy_interface.c  unit.c  unit_commands.c  unit_io.c  unit_task.c
include/: compat.h  device.h
runtime-config/: CMakeLists.txt
runtime-config/include/: runtime_config.h
runtime-config/src/: runtime_config.c
